src/test/ui/suggestions/pub-ident-fn-or-struct-2.stderr
error: missing `fn` or `struct` for method or struct definition
  --> $DIR/pub-ident-fn-or-struct-2.rs:11:4
   |
11 | pub S();
   |    ^

error: aborting due to previous error

